--- a/css/style.css
+++ b/css/style.css
@@ -351,12 +351,13 @@ select {
   border-radius: 0.2rem;
   max-height: 0;
   overflow: hidden;
-  transition: max-height 250ms ease-in;
+  transition: max-height 200ms ease-in;
   position: absolute;
   width: calc(100% - 2px);
 }
 .select .options.open {
   max-height: 500px;
+  z-index: 1;
 }
 .select .option {
   padding: 0.4rem;
